$Id$

2005-09-05 Sebastian Dransfeld (sebastid at tango flipp net)
      * src/plugins/pop3/pop3.c: Include <stdlib.h> for free ().
      * src/plugins/maildir/maildir.c: Include <unistd.h> for close ().

2005-09-05 Sebastian Dransfeld (sebastid at tango flipp net)
      * src/include/embrace.h: Define MIN and MAX

2005-09-05 Sebastian Dransfeld (sebastid at tango flipp net)
      * src/main.c, src/include/embrace.h, src/lib/embrace.c,
        src/lib/embrace_plugin.c, src/lib/mailbox.c,
        src/plugins/imap/imap.c, src/plugins/maildir/maildir.c,
        src/plugins/mbox/mbox.c: Add missing headers.

2005-09-04 Sebastian Dransfeld (sebastid at tango flipp net)
       * src/lib/Makefile.am: Include edje CFLAGS

2005-09-04 Sebastian Dransfeld (sebastid at tango flipp net)
       * src/Makefile.am, src/lib/Makefile.am
         src/plugins/{imap,maildir,mbox,pop3,sylpheed}/Makefile.am:
	 Add missing includes.

2005-09-03 Sebastian Dransfeld (sebastid at tango flipp net)
       * src/plugin/imap.c: Fix memleak, and remove server
         from server list before destroying it.

2005-09-04 Tilman Sauerbeck (tilman at code-monkey de)
        * src/lib/embrace.c: Fix embrace_expand_path() to work when
          there's no ~ in the source string (Jens Taprogge)

2005-09-03 Tilman Sauerbeck (tilman at code-monkey de)
        * src/plugin/imap.c: Merged Sebastian Dransfeld's patch that
          implents "connection sharing"
        * src/plugin/pop3.c: Updated for recent imap changes
        * src/plugin/{imap,pop3}.c: Remove event handlers for server
          events on shutdown (Sebastian Dransfeld)

2005-09-03 Sebastian Dransfeld (sebastid at tango flipp net)
        * m4/ac_path_generic.m4: Remove trailing info after x.y.z
          in versions.
        * src/lib/embrace.c: Make embrace_load_ui () static,
          it is only used in this file.
        * src/lib/embrace.{h,c}: Add void to functions without
          arguments.